--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
             <h2 class="mb-5 text-4xl font-bold text-white">Ahmad Izuul Maula</h2>
             <h3 class="mb-2 text-2xl font-bold">Hubungi Saya</h3>
-            <p>sandhikagalih@gmail.com</p>
-            <p>Jl. Dr. Setiabudhi No. 193</p>
+            <p>izzulmaula91@gmail.com</p>
+            <p>Jl. Pasuruhan Lor</p>
             <p>Kudus</p>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
