--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="dist/img/izzul.png" alt="Sandhika Galih" class="relative z-10 mx-auto max-w-full" />
+              <img src="dist/img/inzul.png" alt="Sandhika Galih" class="relative z-10 mx-auto max-w-full w-96" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -172,7 +172,7 @@
 
               <!-- LinkedIn -->
               <a
-                href="#"
+                href="https://www.linkedin.com/in/ahmad-inzul-maula-946872311/"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -204,13 +204,31 @@
         </div>
 
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
+
           <div class="mb-12 p-4 md:w-1/2">
+            <div class="overflow-hidden rounded-md shadow-md">
+              <img src="dist/img/portfolio/3.png" alt="Landing Page" width="w-full" />
+            </div>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Reliji Trash Care</h3>
+            <p class="text-base font-medium text-secondary">Website untuk memilah sampah sesuai kategori.</p>
+          </div>
+
+          <div class="mb-12 p-4 md:w-1/2">
+          <div class="overflow-hidden rounded-md shadow-md">
+            <img src="dist/img/portfolio/4.png" alt="Landing Page" width="w-full" />
+          </div>
+          <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Kudus Kota Kretek</h3>
+          <p class="text-base font-medium text-secondary">Website tentang kota Kudus.</p>
+        </div>
+
+        <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/1.jpeg" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Score App</h3>
             <p class="text-base font-medium text-secondary">Website untuk menghitung skor di masing-masing tim.</p>
           </div>
+
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/2.jpeg" alt="E-Commerce" width="w-full" />
@@ -218,6 +236,7 @@
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Parallax Animation</h3>
             <p class="text-base font-medium text-secondary">Website dengan implementasi parallax effect.</p>
           </div>
+
           </div>
         </div>
       </div>
@@ -294,7 +313,7 @@
             <h2 class="mb-5 text-4xl font-bold text-white">Ahmad Izuul Maula</h2>
             <h3 class="mb-2 text-2xl font-bold">Hubungi Saya</h3>
             <p>izzulmaula91@gmail.com</p>
-            <p>Jl. Pasuruhan Lor</p>
+            <p>Desa Pasuruhan Lor</p>
             <p>Kudus</p>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
@@ -387,7 +406,7 @@
 
             <!-- LinkedIn -->
             <a
-              href="#"
+              href="https://www.linkedin.com/in/ahmad-inzul-maula-946872311/"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
